# learning-python

./: .gitignore  README.md  xlswritter.py
automate_the_boring_stuff/: PhoneEmail_scrapper.py  box_printing.py  guess_game.py  test_logging.py  walking_dir.py
basics/: adivinhacao.py  arquivos.py  forca.py  jogo.py  list_comprehension.py  palavras.txt  print.py
fullstack_udacity/lesson2/class-demos/: db_example.py  db_insert.py  db_select.py  notes.txt
fullstack_udacity/lesson3/class-demos/: flask_hello_app.py
oo/: conta.py  heranca-multipla.py  teste.py
oo/model/: modelo.py
outros/: nested-json.py  search_network_drive.py
python-refresher/: code.py
python-refresher/02_string_formatting/: code.py
rest-api/: flask_basic_app.py  flask_restful.py  flask_restful_basic.py
rest-api/first_api/: first_api.py
rest-api/first_api/templates/: index.html
rest-api/flask-RESTful/code/: app.py
rest-api/flask_htmx_tailwind/: .flaskenv  pyproject.toml
rest-api/flask_htmx_tailwind/src/flask_htmx/: __init__.py
rest-api/flask_htmx_tailwind/src/flask_htmx/templates/partials/: entry_page.html
rest-api/flask_smorest/: .gitignore  CONTRIBUTING.md  Dockerfile  app.py  blocklist.py  docker-compose.yml  requirements.txt  schemas.py  tasks.py
rest-api/flask_smorest/instance/: data.db
rest-api/flask_smorest/models/: item.py  item_tags.py  store.py  tag.py  user.py
rest-api/flask_smorest/resources/: item.py  store.py  tag.py  user.py
rest-api/teste/: README.md  flask_basic1.py
src/flask_htmx/templates/: base.html  feed.html  icons.jinja2
(+6 files in other folders)
