[project]
name = "flask-htmx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "carevon", email = "felipe.dioliveira@outlook.com" }
]
dependencies = [
    "flask[dotenv]>=3.0.3",
    "jinja-partials>=0.2.1",
    "feedparser>=6.0.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flask_htmx"]
